# voice-rag-assistant

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API.md
src/rag/: knowledge_base.py
src/tts/: text_to_speech.py
src/voice/: speech_to_text.py
tests/: conftest.py  test_knowledge_base.py  test_speech_to_text.py  test_text_to_speech.py
