[project]
name = "voice-rag-assistant"
version = "1.0.0"
description = "Voice-powered RAG assistant with speech-to-text and text-to-speech"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
